--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="caramelo.com.br.notepad.MainActivity">
+    tools:context="caramelo.com.br.notepad.ui.notelist.NoteListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
