note detail + remove note

--- a/app/src/main/res/layout/content_note_detail.xml
+++ b/app/src/main/res/layout/content_note_detail.xml
@@ -8,6 +8,16 @@
     tools:context="caramelo.com.br.notepad.ui.notedetail.NoteDetailActivity"
     tools:showIn="@layout/activity_note_detail">
 
+    <ProgressBar
+        android:id="@+id/loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <android.support.v7.widget.CardView
         android:id="@+id/noteTitleCardView"
         android:layout_width="0dp"
@@ -40,16 +50,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noteTitleCardView" >
+        app:layout_constraintTop_toBottomOf="@+id/noteTitleCardView">
 
         <EditText
             android:id="@+id/noteContentEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="top|start"
+            android:hint="Conteudo"
             android:inputType="textMultiLine"
-            android:scrollbars="vertical"
-            android:hint="Conteudo" />
+            android:scrollbars="vertical" />
 
     </android.support.v7.widget.CardView>
 
