--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -24,23 +24,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:hint="Título"/>
+                android:hint="Título"
+                style="@style/DetailTitleEditText"/>
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <EditText
-        android:id="@+id/noteContentEditText"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="top|start"
-        android:inputType="textMultiLine|textCapWords"
-        android:scrollbars="vertical"
-        android:padding="8dp"
-        android:hint="Conteúdo"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:text="conteudo"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <EditText
+            android:id="@+id/noteContentEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="top|start"
+            android:inputType="textMultiLine|textCapWords"
+            android:scrollbars="vertical"
+            android:padding="8dp"
+            android:hint="Conteúdo"
+            tools:text="conteudo"/>
+
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
